add example for render

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,4 @@
-LDLIBS = -pthread
+LDLIBS = -pthread -lncurses
 .PHONY: clean
 
 pthreads:
@@ -7,5 +7,7 @@ mutex:
 
 semaphore:
 
+render:
+
 clean:
-	rm -rf pthreads mutex semaphore
+	rm -rf pthreads mutex semaphore render
